--- a/Workshop-Landing-Page/css/styles.css
+++ b/Workshop-Landing-Page/css/styles.css
@@ -199,7 +199,7 @@ button:hover {
 
 .slick-slide img {
     width: 311px;
-    margin-left: 13px;
+    margin-left: 42.5%;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5);
